<resources>
    <string name="app_name">HealthApp</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="planner_page_send">Planner Page</string>
    <string name="save_plan">Save Plan</string>
    <string name="enter_workout">Enter a workout</string>
    <string name="workout_monday">Monday</string>
    <string name="workout_tuesday">Tuesday</string>
    <string name="workout_wednesday">Wednesday</string>
    <string name="workout_thursday">Thursday</string>
    <string name="workout_friday">Friday</string>
    <string name="workout_saturday">Saturday</string>
    <string name="workout_sunday">Sunday</string>
    <string name="toast_output"></string>
    <string name="pedometer">Pedometer</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
        completions.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="confirm">Confirm</string>

    <string name="prompt_weight">Weight</string>
    <string name="prompt_height">Height (In Inches)</string>
    <string name="bmi_display">BMI: </string>
    <string name="calculate">Calculate</string>

    <string name="user_add_workout">Add workout</string>
    <string name="user_calendar">View Calendar</string>
    <string name="user_enter_workout">Enter workout results</string>

    <string name="filler">FILLER</string>
    <string name="reps">Reps (Filler)</string>
    <string name="weight">Weight (Filler)</string>

    <string name="back">Back to profile</string>

    <string name="menu_settings">Settings</string>
    <string name="step_number">Steps</string>
    <string name="use_time">TIME</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="velocity">Pace</string>
    <string name="zero">0</string>
    <string name="double_zero">0.0</string>
    <string name="calories_zero">0.0</string>
    <string name="velocity_zero">0.0</string>
    <string name="km">mi</string>
    <string name="calorie">cal</string>
    <string name="kilometer_per_hour">mph</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="cancel">Cancel</string>
    <string name="daily">TODAY</string>
    <string name="image_star">image_star</string>
    <string name="sunday">SUNDAY</string>
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="month">/</string>
    <string name="day">/</string>
    <string name="todo">TODO</string>
    <string name="information">View More</string>
    <string name="settings_title">Settings</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="sensitivity_info">Please adjust sensitivity according your workout. Set higher
        sensitivity for less intense workout.</string>
    <string name="step_length">Step Length</string>
    <string name="inches">in</string>
    <string name="setp_length_info_1">Please set step length to estimate your pace and distance.
        For reference only.</string>
    <string name="Sweight">Weight</string>
    <string name="lbs">lbs</string>
    <string name="weight_info">Please set your body weight.</string>
    <string name="save">Save</string>
    <string name="cancle">Cancel</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pedometer_info">PedometerInfoActivity</string>
    <string name="info_1">Today you\'ve achieved</string>
    <string name="info_2">%s steps</string>
    <string name="info_3">%s calories</string>
    <string name="info_4">%s miles</string>
    <string name="y_info_1">Yesterday, you took</string>
    <string name="y_info_2">%s steps</string>
    <string name="settings">Settings</string>
    <string name="view_more">View More</string>
    <string name="b_info_1">Sunday, you excercised</string>
    <string name="b_info_2">%s steps</string>
    <string name="c_info_1">Saturday, you enjoyed</string>
    <string name="c_info_2">%s steps</string>


</resources>
