<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/info_background"
    tools:context="uwstout.healmebaby.PedometerInfoActivity">


    <TextView
        android:id="@+id/txt1"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/info_1"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="casual"
        android:text="@string/info_2"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="casual"
        android:text="@string/info_3"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:fontFamily="casual"
        android:text="@string/info_4"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ytxt1"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:fontFamily="casual"
        android:text="@string/y_info_1"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/ytxt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:fontFamily="casual"
        android:text="@string/y_info_2"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="30sp"
        android:textStyle="bold" />





</android.support.design.widget.CoordinatorLayout>
